--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ a.active hr{
   font-weight: 400;
   font-style: normal;
 }
+@media (max-width: 649px){
+  a.active {
+    background-color: black;
+    color: white;
+  }
+}
